--- a/src/docs/5.39.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.39.x/core-development-concepts/basics/routes-and-events.mdx
@@ -300,7 +300,7 @@ const handler = createHandler({
     // This event handler will only be triggered when an SQS event is received.
     createSQSEventHandler(async ({ request, reply, event, context, lambdaContext }) => {
       // the "context" variable is the same as in our system - as long as you haven't changed Webiny's default plugin loader
-      // because it is an sqs event, you know the type of the "event" variable and you can handle it from there
+      // because it is a sqs event, you know the type of the "event" variable, and you can handle it from there
       const result = await someHeavyCalculation(event);
 
       // maybe store that result into the database?
