fix: add link validation and fix broken links

--- a/docs/developer-docs/5.29.x/architecture/website/overview.mdx
+++ b/docs/developer-docs/5.29.x/architecture/website/overview.mdx
@@ -68,7 +68,7 @@ These are still included in the diagram, just so it's more clear to the reader.
 
 The diagram gives an overview of the complete cloud infrastructure that's needed to host the **Website** project application and, in combination with the **Core** and **API** project applications, that makes prerendering of pages possible.
 
-We have two Amazon CloudFront distributions <diagram-letter>A</diagram-letter> <diagram-letter>D</diagram-letter>, two Amazon S3 buckets <diagram-letter>B</diagram-letter> <diagram-letter>C</diagram-letter>, and the Webiny Prerendering Service <diagram-letter>E</diagram-letter> that consists of three AWS Lambda functions and an Amazon SQS. We also have the **Core** and **API** project applications, which are also involved in the whole process, which we cover in the upcoming [Prerendering Pages](prerendering-pages) section.
+We have two Amazon CloudFront distributions <diagram-letter>A</diagram-letter> <diagram-letter>D</diagram-letter>, two Amazon S3 buckets <diagram-letter>B</diagram-letter> <diagram-letter>C</diagram-letter>, and the Webiny Prerendering Service <diagram-letter>E</diagram-letter> that consists of three AWS Lambda functions and an Amazon SQS. We also have the **Core** and **API** project applications, which are also involved in the whole process, which we cover in the upcoming [Prerendering Pages](/docs/{version}/architecture/website/prerendering-pages) section.
 
 <Alert type="info">
 
