--- a/docs/developer-docs/5.29.x/architecture/website/prerendering-pages.mdx
+++ b/docs/developer-docs/5.29.x/architecture/website/prerendering-pages.mdx
@@ -54,4 +54,4 @@ The flow consists of the following seven steps:
 6. The mentioned Subscribe <diagram-letter>E3</diagram-letter> AWS Lambda function waits until the React application, served back via the Amazon CloudFront distribution <diagram-letter>D</diagram-letter>, has been completely rendered.
 7. Finally, the function stores the generated HTML and related metadata in the Amazon S3 bucket <diagram-letter>B</diagram-letter>. Additional metadata also gets stored in the Amazon DynamoDB <diagram-letter>G</diagram-letter> that's part of the **Core** project application.
 
-With these steps completed, the page is ready to be served to actual website visitors. Continue reading the [Serving Pages](serving-pages) section to learn more.
+With these steps completed, the page is ready to be served to actual website visitors. Continue reading the [Serving Pages](/docs/{version}/architecture/website/serving-pages) section to learn more.
