--- a/docs/developer-docs/5.29.x/architecture/website/serving-pages.mdx
+++ b/docs/developer-docs/5.29.x/architecture/website/serving-pages.mdx
@@ -44,7 +44,7 @@ This way, the static assets don't have to be uploaded twice (to both Amazon S3 b
 
 <Alert type="info">
 
-Learn more about the prerendering flow in the [Prerendering Pages](prerendering-pages) section.
+Learn more about the prerendering flow in the [Prerendering Pages](/docs/{version}/architecture/website/prerendering-pages) section.
 
 </Alert>
 
