--- a/docs/developer-docs/5.34.x/core-development-concepts/development/local-development.mdx
+++ b/docs/developer-docs/5.34.x/core-development-concepts/development/local-development.mdx
@@ -47,4 +47,4 @@ On the other hand, in the DDB + ES version, ElasticSearch is the only non-server
 
 ## Working with team on a Webiny project
 
-Our recommended approach is for each developer to have their own isolated environment in which they deploy and work. This approach also involves each developer having their own AWS account. Once changes are ready, they are then merged into a shared environment, such as the `dev` environment. For more information on this approach, including branches, environments, state files, and more, please refer to the [CI/CD section](/docs/key-topics/ci-cd/introduction). If cost is your concern, please refer to the section above, which states that when using the DynamoDB-only flavor of Webiny, all services utilized are serverless, which typically results in minimal or no cost during development.
+Our recommended approach is for each developer to have their own isolated environment in which they deploy and work. This approach also involves each developer having their own AWS account. Once changes are ready, they are then merged into a shared environment, such as the `dev` environment. For more information on this approach, including branches, environments, state files, and more, please refer to the [CI/CD section](/docs/{version}/core-development-concepts/ci-cd/introduction). If cost is your concern, please refer to the section above, which states that when using the DynamoDB-only flavor of Webiny, all services utilized are serverless, which typically results in minimal or no cost during development.
