--- a/docs/developer-docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
+++ b/docs/developer-docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
@@ -19,11 +19,11 @@ import flpIconOnFolder from "./assets/flp-icon-on-folder.png";
 
 ## Overview
 
-With the 5.38.0 release, we've expanded Webiny's [Advanced Access Control Layer (AACL)](/docs/release-notes/5.37.0/changelog#introducing-advanced-access-control-layer-aacl-2576), by introducing a brand-new feature called **Folder Level Permissions**.
+With the 5.38.0 release, we've expanded Webiny's [Advanced Access Control Layer (AACL)](/docs/{version}/release-notes/5.37.0/changelog#introducing-advanced-access-control-layer-aacl-2576), by introducing a brand-new feature called **Folder Level Permissions**.
 
 <Image src={flp} alt={"Folder Level Permissions"} shadow={false} />
 
-With this feature, users can define access permissions on a folder level. More specifically, users that are designated as **folder owners** can now define which users (and also teams with the [Teams](/docs/enterprise/teams) feature enabled) can access which folders, and what actions they can perform on those folders:
+With this feature, users can define access permissions on a folder level. More specifically, users that are designated as **folder owners** can now define which users (and also teams with the [Teams](/docs/{version}/enterprise/aacl/teams) feature enabled) can access which folders, and what actions they can perform on those folders:
 
 - **Viewer** - users can view content, but not modify it
 - **Editor** - users can view and modify content
@@ -33,7 +33,7 @@ Folder Level Permissions can be used across the three main Webiny applications: 
 
 ## Enabling Folder Level Permissions and Feature Overview
 
-For Webiny Enterprise users, apart from [linking their Webiny project](/docs/wcp/link-a-project) with Webiny Control Panel (WCP), there are no additional steps required to enable Folder Level Permissions.
+For Webiny Enterprise users, apart from [linking their Webiny project](/docs/{version}/wcp/link-a-project) with Webiny Control Panel (WCP), there are no additional steps required to enable Folder Level Permissions.
 
 Once linked, Folder Level Permissions will be automatically enabled and full access users can start using it all three applications: **Headless CMS**, **File Manager**, and **Page Builder**.
 
@@ -79,6 +79,6 @@ A workaround for this is to create a new folder, and then move all the content f
 
 ### How does Folder Level Permissions feature work with existing security layer?
 
-Folder Level Permissions feature is an extension of the existing [security layer](/docs/enterprise/aacl/introduction#the-three-tiers-of-webiny-s-security-layer). It does not replace it.
+Folder Level Permissions feature is an extension of the existing [security layer](/docs/{version}/enterprise/aacl/introduction#the-three-tiers-of-webiny-s-security-layer). It does not replace it.
 
 This means that existing security roles and security teams are still the first thing that is checked when a user tries to access a resource. For example, if user's security role doesn't grant access to Page Builder, then the user will not be able to access Page Builder, even if they have permissions assigned to a folder in Page Builder.
