--- a/docs/developer-docs/5.38.x/enterprise/aacl/introduction.mdx
+++ b/docs/developer-docs/5.38.x/enterprise/aacl/introduction.mdx
@@ -24,7 +24,7 @@ Trying to select **Custom Access** will result in an alert message being shown, 
 
 <Image src={aaclCustomAccessUpgrade} title={"Selecting Custom Access Level on Open Source Tier"} />
 
-To upgrade to **Business** tier, users [link their project](/docs/wcp/link-a-project2) with [Webiny Control Panel (WCP)](/docs/wcp/overview), from where they can activate the Advanced Access Control Layer (AACL) for their project. By doing this, users will be able to define fine-grained permissions for individual Webiny apps.
+To upgrade to **Business** tier, users [link their project](/docs/{version}/wcp/link-a-project) with [Webiny Control Panel (WCP)](/docs/{version}/wcp/overview), from where they can activate the Advanced Access Control Layer (AACL) for their project. By doing this, users will be able to define fine-grained permissions for individual Webiny apps.
 
 <Image
   src={aaclCustomAccess}
