--- a/docs/release-notes/5.33.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.33.0/upgrade-guide.mdx
@@ -64,7 +64,7 @@ Note that upgrade is done across all the models you have in all tenants and all 
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](/docs/{version}/release-notes/5.33.0/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
