--- a/docs/release-notes/5.33.5/upgrade-guide.mdx
+++ b/docs/release-notes/5.33.5/upgrade-guide.mdx
@@ -44,7 +44,7 @@ Make sure you deploy your entire Webiny project using the command shown above. Y
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](/docs/{version}/release-notes/5.33.5/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
