--- a/docs/release-notes/5.37.0/changelog.mdx
+++ b/docs/release-notes/5.37.0/changelog.mdx
@@ -312,7 +312,7 @@ Finally, for the most advanced use cases, users can upgrade to the **Enterprise*
 
 This feature is especially useful for larger organizations, where it's common to have multiple teams working on different projects. Also, it's a great way to simplify the process of managing permissions for multiple users, as you can simply assign a role to a team, instead of assigning it to each individual user.
 
-For more information on the Teams, please refer to the newly added [Teams](/docs/enterprise/teams) section of the Webiny Enterprise documentation.
+For more information on the Teams, please refer to the newly added [Teams](/docs/enterprise/aacl/teams) section of the Webiny Enterprise documentation.
 
 #### A Note On Backwards Compatibility
 
