--- a/docs/release-notes/5.37.6/upgrade-guide.mdx
+++ b/docs/release-notes/5.37.6/upgrade-guide.mdx
@@ -44,7 +44,7 @@ Make sure you deploy the entire system using the command shown above! You have t
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](/docs/{version}/release-notes/5.37.6/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
