--- a/docs/release-notes/5.38.0/changelog.mdx
+++ b/docs/release-notes/5.38.0/changelog.mdx
@@ -26,17 +26,17 @@ import fnShiftSelect from "./assets/fm-shift-select.mp4"
 
 ### Removal of `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable ([#3672](https://github.com/webiny/webiny-js/pull/3672))
 
-Used only with [Amazon DynamoDB + Amazon ElasticSearch](http://docs:8000/docs/architecture/introduction#different-database-setups) database setup, the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable would allow users to choose whether they want their ElasticSearch indexes to include a locale code in their names. 
+Used only with [Amazon DynamoDB + Amazon ElasticSearch](/docs/{version}/architecture/introduction#different-database-setups) database setup, the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable would allow users to choose whether they want their ElasticSearch indexes to include a locale code in their names. 
 
 Today, there is really no reason to not set this to `true`, so we've decided to hide this environment variable altogether, and always include the locale code in the index name.
 
-We're aware that this might cause issues for existing projects, so we've added [a couple of notes](/docs/release-notes/5.38.0/upgrade-guide#4-webiny-elasticsearch-index-locale-environment-variable) in the migration guide to help you with the migration process.
+We're aware that this might cause issues for existing projects, so we've added [a couple of notes](/docs/{version}/release-notes/5.38.0/upgrade-guide#4-webiny-elasticsearch-index-locale-environment-variable) in the migration guide to help you with the migration process.
 
 ## Security
 
 ### Advanced Access Control Layer (AACL) - Folder Level Permissions ([#3610](https://github.com/webiny/webiny-js/pull/3610))
 
-With this release, we're expanding Webiny's [Advanced Access Control Layer (AACL)](/docs/release-notes/5.37.0/changelog#introducing-advanced-access-control-layer-aacl-2576), by introducing a brand-new feature called **Folder Level Permissions**.
+With this release, we're expanding Webiny's [Advanced Access Control Layer (AACL)](/docs/{version}/release-notes/5.37.0/changelog#introducing-advanced-access-control-layer-aacl-2576), by introducing a brand-new feature called **Folder Level Permissions**.
 
 <Image src={flp} alt={"Folder Level Permissions"} shadow={false} />
 
@@ -54,7 +54,7 @@ Once defined, besides the selected folder, the access permissions are also inher
 
 We believe that this feature will be especially useful for teams that are working on large projects, where the content is organized into multiple folders, and where the content is managed by multiple users.
 
-To learn more, please refer to the newly added [Folder Level Permissions](/docs/enterprise/aacl/folder-level-permissions) article.
+To learn more, please refer to the newly added [Folder Level Permissions](/docs/{version}/enterprise/aacl/folder-level-permissions) article.
 
 ### Audit Logs ([#3454](https://github.com/webiny/webiny-js/pull/3454) [#3580](https://github.com/webiny/webiny-js/pull/3580) [#3644](https://github.com/webiny/webiny-js/pull/3644) [#3645](https://github.com/webiny/webiny-js/pull/3645))
 
@@ -142,7 +142,7 @@ As the name suggests, multi-step forms allow users to break down long forms into
 
 In terms of backward compatibility, note that, upon redeploying your Webiny project, a data migration will be triggered, which will automatically convert all existing forms into multi-step forms. In essence, in this process, all form fields from existing forms will be moved into the first step of the form.
 
-In terms of manual steps, note that you will still need to update a couple of form layout React components, which will partially be handled by the project upgrade script that's included in this release. For more information, please refer to the [Upgrade Guide](/docs/release-notes/5.38.0/upgrade-guide#3-form-builder-multi-step-forms).
+In terms of manual steps, note that you will still need to update a couple of form layout React components, which will partially be handled by the project upgrade script that's included in this release. For more information, please refer to the [Upgrade Guide](/docs/{version}/release-notes/5.38.0/upgrade-guide#3-form-builder-multi-step-forms).
 
 [//]: # (## Deployments)
 
