--- a/docs/release-notes/5.36.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.36.0/upgrade-guide.mdx
@@ -76,7 +76,7 @@ system. Partial deploys may cause the upgrade to be applied incorrectly.
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](/docs/{version}/release-notes/5.36.0/upgrade-webiny#pre-production-environments-first) section, we recommend that you
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you
 first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
