fix: replace hard coded versions with {version} variable

--- a/docs/developer-docs/5.35.x/core-development-concepts/basics/project-deployment.mdx
+++ b/docs/developer-docs/5.35.x/core-development-concepts/basics/project-deployment.mdx
@@ -129,7 +129,7 @@ Read more about project organization in the [Project Organization](/docs/{versio
 
 Although the cloud infrastructure resources that Webiny deploys are already configured in the best possible manner, there are still cases where some modifications might be needed. In some cases even, the deployed cloud infrastructure needs to be expanded by introducing additional resources into the mix.
 
-To learn more, please check out the [Modify Cloud Infrastructure](/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure) article.
+To learn more, please check out the [Modify Cloud Infrastructure](/docs/{version}/infrastructure/basics/modify-cloud-infrastructure) article.
 
 ## Debugging
 
