fix: replace specific handler create

--- a/src/docs/5.39.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.39.x/core-development-concepts/basics/routes-and-events.mdx
@@ -4,6 +4,7 @@ description: You will learn about new handlers for routes and events and how to 
 ---
 
 
+
 import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="What You’ll Learn">
@@ -114,7 +115,7 @@ const handler = createRawHandler({
 ```ts
 import { createHandler, createS3EventHandler } from "@webiny/handler-aws";
 
-const handler = createS3Handler({
+const handler = createHandler({
   plugins: [
     createS3EventHandler(async ({ event, context }) => {
       await deleteFileFromDynamoDb({ context, event });
@@ -128,7 +129,7 @@ const handler = createS3Handler({
 ```ts
 import { createHandler, createEventBridgeEventHandler } from "@webiny/handler-aws";
 
-const handler = createEventBridgeHandler({
+const handler = createHandler({
   plugins: [
     createEventBridgeEventHandler(async ({ event, context }) => {
       const result = doSomethingWithEventBridgeEvent({ context, event });
