fix: wording and examples

--- a/src/docs/5.39.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
+++ b/src/docs/5.39.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
@@ -81,7 +81,7 @@ After you added the route to the `API Gateway`, you can move onto creating a rou
 
 ```typescript apps/api/graphql/src/index.ts
 // add the import somewhere at the top of the file or update the existing import from @webiny/handler-aws
-import { createApiGatewayRoute } from "@webiny/handler-aws";
+import { createHandler, createApiGatewayRoute } from "@webiny/handler-aws";
 
 // existing handler
 export const handler = createHandler({
@@ -119,7 +119,7 @@ To have a Fastify route which accepts dynamic parameters, you must specify the p
 
 ```typescript apps/api/graphql/src/index.ts
 // add the import somewhere at the top of the file or update the existing import from @webiny/handler-aws
-import { createApiGatewayRoute } from "@webiny/handler-aws";
+import { createHandler, createApiGatewayRoute } from "@webiny/handler-aws";
 
 // existing handler
 export const handler = createHandler({
