chore: update non-versioned document root

--- a/docs/handbook/introduction.mdx
+++ b/docs/handbook/introduction.mdx
@@ -1,12 +1,11 @@
 ---
-id: ac7dec7e
 title: Company Handbook
 description: Learn how Webiny operates as a company
 ---
 
 ## Overview
 
-This section of our docs is dedicated to everything related to Webiny as a company. Everyone is welcome to contribute new articles, or update existing ones.
+This section of our docs is dedicated to everything related to Webiny as a company. Everyone is welcome to contribute new articles, or update [existing ones](/docs/get-started/install-webiny).
 
 ## First Steps
 
