chore: sync with latest master

--- a/docs/developer-docs/5.28.x/overview/applications/apw.mdx
+++ b/docs/developer-docs/5.28.x/overview/applications/apw.mdx
@@ -5,20 +5,16 @@ description: A workflow driven publishing process.
 ---
 
 import { Alert } from "@/components/Alert";
+import YouTube from "@/components/YouTube";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- Advanced Publishing Workflow feature overview
+  - Advanced Publishing Workflow feature overview
 
 </Alert>
 
-<Alert type="warning" title="BETA">
 
-This application is currently in Beta testing. In case you wish to join the waiting list, please reach out to sales@webiny.com.
-
-</Alert>
-
-![Webiny CMS - Advanced Publishing Workflow](./assets/webiny-apw.png)
+<YouTube id="NNRghN1yY_g" />
 
 The Advanced Publishing Workflow (APW) is an application that runs on top of the Page Builder and the Headless CMS. By default, those applications come with a simplified publishing workflow. For example, users can either publish content or set it in a `review requested` state. The actual review is done outside the system, and there's no collaboration platform that's provided to manage this activity.
 This is where the APW comes in.
@@ -34,13 +30,13 @@ Within the APW, you are able to:
 You can have multiple publishing workflows, where each workflow has different steps, members, and rules when it applies. You can define workflows that apply to:
 
 - **Page Builder:**
-  - All pages
-  - Pages inside specific categories
-  - One or more individual pages
+- All pages
+- Pages inside specific categories
+- One or more individual pages
 - **Headless CMS**
-  - All entries
-  - Entries inside a particular group
-  - Specific entries
+- All entries
+- Entries inside a particular group
+- Specific entries
 
 In practice, you can say have a 2-step workflow that applies every time someone wants to publish a new blog post article. Those steps might be a peer review from a copywriter and a peer review from a marketing person. Then you can have another workflow that has 4-steps, and it only applies to when someone wants to change the homepage. In that case, you might want to get a peer review from someone in the legal department, marketing, sales, the CEO themself.
 
