--- a/docs/developer-docs/5.28.x/overview/applications/headless-cms.mdx
+++ b/docs/developer-docs/5.28.x/overview/applications/headless-cms.mdx
@@ -8,7 +8,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- Features, capabilities and, common use-cases of Webiny’s Headless CMS.
+  - Features, capabilities and, common use-cases of Webiny’s Headless CMS.
 
 </Alert>
 
@@ -20,7 +20,7 @@ When it comes to defining content models, there are also three different approac
 1. No-code approach using the UI editor
 2. API approach using the `manage` API
 3. Code approach by defining the models directly through code
-   You can pick a single approach or use a combination, whichever works better for your use case.
+You can pick a single approach or use a combination, whichever works better for your use case.
 
 Use the Headless CMS to power backends for business applications, mobile apps and to manage data for a website, like blogs or eCommerce stores.
 
@@ -35,32 +35,38 @@ Under the term “content model” we refer to an entity that consists of one or
 Each attribute can be of a different type. The included types are:
 
 - **Input**
-  - a single-line text input or a multi-entry input
-  - can also be a list of predefined values the user can select
+- a single-line text input or a multi-entry input
+- can also be a list of predefined values the user can select
 - **Number**
-  - A integer or a float
+- A integer or a float
 - **Text**
-  - Multi-line text
-  - Doesn’t support text formatting
+- Multi-line text
+- Doesn’t support text formatting
 - **Rich text**
-  - A multi-line rich text field that supports text formatting and inline images
+- A multi-line rich text field that supports text formatting and inline images
 - **Boolean**
-  - True or false toggle
+- True or false toggle
 - **File**
-  - Used for inserting a single file, multiple files, a single image or an image gallery
+- Used for inserting a single file, multiple files, a single image or an image gallery
 - **Reference**
-  - Referencing another content model
-  - Supports both single entries and multiple select
+- Referencing another content model
+- Supports both single entries and multiple select
 - **Object**
-  - Nested object field
-  - Inside this field you can place multiple other fields such as text, file and others
-  - You can nest objects to as many depth levels as you need
+- Nested object field
+- Inside this field you can place multiple other fields such as text, file and others
+- You can nest objects to as many depth levels as you need
+- **Dynamic zone**
+- A dynamic zone is a field that can contain multiple other fields
+- The difference between a dynamic zone and an object is that a dynamic zone allows you to select which fields you want to use
+- This is useful when you have a content model that has a lot of fields, but you only want to use a few of them in a particular entry
+- You can also nest dynamic zones to as many depth levels as you need
+- See Dynamic Zone in action: [https://www.youtube.com/watch?v=8Z3Z3Y5Q5Zo](https://www.youtube.com/watch?v=4hOScz42_Nw)
 
 Besides the default built-in attributes, you can expand Webiny with custom plugins that introduce new fields.
 
 <Alert type="info">
 
-Checkout the tutorial on [Creating a Webiny Headless CMS custom field plugin](/docs/{version}/headless-cms/extending/custom-field-type).
+  Checkout the tutorial on [Creating a Webiny Headless CMS custom field plugin](/docs/{version}/headless-cms/extending/custom-field-type).
 
 </Alert>
 
@@ -73,11 +79,11 @@ On each of the attributes, you can attach one or more validators. They define wh
 The Headless CMS has 3 APIs which expand dynamically every time you create a new content model. Therefore, depending on what you want to do, you will use a different endpoint:
 
 - **`Manage` API endpoint**
-  - This is the primary endpoint; it allows you to create, delete, publish, unpublish and many other read and write operations.
+- This is the primary endpoint; it allows you to create, delete, publish, unpublish and many other read and write operations.
 - **`Read` API endpoint**
-  - Only has queries to read data. It can only read data that is published.
+- Only has queries to read data. It can only read data that is published.
 - **`Preview` API endpoint**
-  - Similarly to the Read API, with the exception that it returns the latest version of the content, regardless if the latest version is published or not.
+- Similarly to the Read API, with the exception that it returns the latest version of the content, regardless if the latest version is published or not.
 
 You can explore the queries and mutations available under each of the APIs inside the Admin Panel by accessing the API Playground from the main menu.
 
@@ -101,7 +107,7 @@ The second operation is the read operation, which comes when you interact with t
 
 <Alert type="success">
 
-The only time when Webiny uses DynamoDB to fetch items from the database is when you are requesting a particular item via the primary key.
+  The only time when Webiny uses DynamoDB to fetch items from the database is when you are requesting a particular item via the primary key.
 
 </Alert>
 
@@ -109,7 +115,7 @@ The data inside the Elasticsearch service is stored so it can be quickly retriev
 
 <Alert type="info">
 
-For an in-depth performance benchmark checkout the [performance benchmark](/docs/{version}/performance-and-load-benchmark/introduction).
+  For an in-depth performance benchmark checkout the [performance benchmark](/docs/{version}/performance-and-load-benchmark/introduction).
 
 </Alert>
 
@@ -118,10 +124,10 @@ For an in-depth performance benchmark checkout the [performance benchmark](/docs
 Here are some key differentiators for when you should consider using Webiny’s Headless CMS:
 
 - **Data ownership**
-  - In both the open-source and the enterprise edition, Webiny is self-hosted. So if you need a highly scalable headless CMS solution, but don’t want to spend a lot of resources on managing and scaling infrastructure, Webiny is a great option.
+- In both the open-source and the enterprise edition, Webiny is self-hosted. So if you need a highly scalable headless CMS solution, but don’t want to spend a lot of resources on managing and scaling infrastructure, Webiny is a great option.
 - **Customizability**
-  - Headless CMS can be fully tailor-made to your requirements. Being open-source you have full control over the code which you can modify to your needs.
+- Headless CMS can be fully tailor-made to your requirements. Being open-source you have full control over the code which you can modify to your needs.
 - **Cost**
-  - All of the infrastructure components Webiny uses, besides Elasticsearch, have consumption-based pricing, they scale automatically and require zero maintenance. Serverless in practice lowers infrastructure costs by 60-80% and maintenance costs by 60%.
+- All of the infrastructure components Webiny uses, besides Elasticsearch, have consumption-based pricing, they scale automatically and require zero maintenance. Serverless in practice lowers infrastructure costs by 60-80% and maintenance costs by 60%.
 - **Scalability**
-  - With Webiny there is almost no need to reconfigure and redesign your infrastructure as your demand grows or shrinks. It’s a solution that you can use to start serving 100 users a day and the next day scale to handle over 10 million users a day or more.
+- With Webiny there is almost no need to reconfigure and redesign your infrastructure as your demand grows or shrinks. It’s a solution that you can use to start serving 100 users a day and the next day scale to handle over 10 million users a day or more.
