--- a/docs/release-notes/5.38.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.38.0/upgrade-guide.mdx
@@ -1,5 +1,5 @@
 ---
-id: aafea999
+id: a4d38491
 title: Upgrade from 5.37.x to 5.38.0
 description: Learn how to upgrade Webiny from 5.37.x to 5.38.0.
 ---
@@ -9,14 +9,14 @@ import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
 
 <Alert type="success" title="What you’ll learn">
 
-- how to upgrade Webiny from 5.37.x to 5.38.x
+  - how to upgrade Webiny from 5.37.x to 5.38.x
 
 </Alert>
 
 <Alert type="info">
 
-Make sure to check out the [5.38.0 changelog](/docs/{version}/release-notes/5.38.0/changelog) to get familiar with the changes introduced in this
-release.
+  Make sure to check out the [5.38.0 changelog](./changelog) to get familiar with the changes introduced in this
+  release.
 
 </Alert>
 
@@ -52,7 +52,7 @@ With the introduction of [multi-step forms](/docs/release-notes/5.38.0/changelog
 
 In terms of existing data in the database, upon upgrading and deploying your Webiny project, all existing forms and form submissions will be automatically converted to multi-step forms (that consist of a single step).
 
-But, before deploying, a couple of manual steps need to be performed in your form layouts-related React code. The above `webiny upgrade` command will partially assist with that. 
+But, before deploying, a couple of manual steps need to be performed in your form layouts-related React code. The above `webiny upgrade` command will partially assist with that.
 
 The command will first make a backup of your existing `apps/theme/layouts/forms` folder will be created (in `apps/theme/layouts/_forms_backup`). This will ensure no code is lost in the process. Second, it will generate a new `apps/theme/layouts/forms` folder, which contains the latest React code. More specifically, it contains the latest default form layout React code, which supports multi-step forms.
 
@@ -66,7 +66,7 @@ The [`apps/theme/layouts/forms/DefaultFormLayout.tsx`](https://github.com/webiny
 
 The code also imports the new `Button` component from the [`apps/theme/layouts/forms/DefaultFormLayout/buttons/Button.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/layouts/forms/DefaultFormLayout/buttons/Button.tsx) file, which is another difference between the two versions. This is a new component that did not exist in the 5.37.0 version. It is used to render the buttons for moving between form steps and also for submitting the form.
 
-With these two, the rest of the code is the same, so you can simply copy over any changes you might have made to the old code to the new code. 
+With these two, the rest of the code is the same, so you can simply copy over any changes you might have made to the old code to the new code.
 
 ### 4. `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable
 
@@ -76,15 +76,15 @@ With these two, the rest of the code is the same, so you can simply copy over an
 
 </Alert>
 
-Used only with [Amazon DynamoDB + Amazon ElasticSearch](docs/architecture/introduction#different-database-setups) database setup, the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable allows users to choose whether they want their ElasticSearch indexes to include a locale code in their names. 
+Used only with [Amazon DynamoDB + Amazon ElasticSearch](docs/architecture/introduction#different-database-setups) database setup, the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable allows users to choose whether they want their ElasticSearch indexes to include a locale code in their names.
 
-By default, this environment variable is set to `true` via the `.env` file located in the root of your project. It is also recommended to set it to `true` in your CI/CD workflows that deploy your long-lived environments (e.g. `production`). 
+By default, this environment variable is set to `true` via the `.env` file located in the root of your project. It is also recommended to set it to `true` in your CI/CD workflows that deploy your long-lived environments (e.g. `production`).
 
 To make things simpler for users, with the 5.38.0 release, we've decided to hide this environment variable altogether, and always include the locale code in the index name.
 
 #### What does this mean for existing projects?
 
-If you've had the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable set to `true` during development and, more importantly, in your CI/CD workflows that deploy your long-lived environments (e.g. `production`), you don't need to do anything. You can also remove it, and your project will continue to work as expected. 
+If you've had the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable set to `true` during development and, more importantly, in your CI/CD workflows that deploy your long-lived environments (e.g. `production`), you don't need to do anything. You can also remove it, and your project will continue to work as expected.
 
 But, if you had the environment variable set to `false` or you didn't have it set at all, you'll need to ensure its value is set to `false` upon deployment. This goes for both your local development environment and, more importantly, your CI /CD workflows.
 
@@ -110,6 +110,3 @@ yarn webiny deploy --env {environment}
 ```
 
 <AdditionalNotes />
-
-## Additional Notes
-
