--- a/src/docs/shared/release-notes/5.38.1/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.38.1/upgrade-guide.mdx
@@ -31,7 +31,14 @@ yarn up "@webiny/*@5.38.1"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.38.1**.
 
-### 2. Deploy Your Project
+### 2. Run the Upgrade Command (If Upgrading from 5.37.x)
+
+In case you are upgrading to **5.38.1** from **5.37.x**, you must upgrade your project. Depending on your project, you might also need to perform a couple of manual steps.
+
+Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.38.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.37.x to 5.38.0](/docs/guides/upgrade/5.37.x-to-5.38.0) upgrade guide.
+
+
+### 3. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
