docs: add add changelog elements

--- a/docs/release-notes/5.38.2/changelog.mdx
+++ b/docs/release-notes/5.38.2/changelog.mdx
@@ -5,17 +5,42 @@ description: See what's new in Webiny version 5.38.2.
 ---
 
 import { Alert } from "@/components/Alert";
+import { Gallery } from "@/components/Image";
+import hcmsFm1 from "./assets/hcms-fm-step-1.png";
+import hcmsFm2 from "./assets/hcms-fm-step-1.png";
+import fmFileDetails from "./assets/fm-file-details.png
 
 <GithubRelease version={"5.38.2"} />
 
 ## Headless CMS
 
-### File Manager Interaction From a New Reference Entry Dialog ([#3758](https://github.com/webiny/webiny-js/pull/3758))
+### File Manager Interaction when instantiated from Create Reference Dialog ([#3758](https://github.com/webiny/webiny-js/pull/3758))
 
-...
+Before this release, users were experiencing unusual behaviour when interacting with the file manager that opened from the new reference entry dialog. The following steps could reproduce the issue:
+
+1. Open an entry with a reference field, ensuring the target model has a file field.
+2. Click on the "Create a new record" button.
+3. The dialog for creating a new record should open.
+4. Click on the file field.
+5. Notice that the file manager opened in the background, preventing the user from interacting with it.
+
+With this release, the identified issue has been addressed. Users can now seamlessly interact with the file manager opened from the new reference entry dialog without encountering the previously observed odd behavior.
+
+<Gallery>
+  <Image
+    src={hcmsFm1}
+    alt={"Reproduce bug: Step 1"}
+  />
+  <Image
+    src={hcmsFm2}
+    alt={"Reproduce bug: Step 2"}
+  />
+</Gallery>
 
 ## File Manager
 
 ### Fix File Details Drawer Overlay ([#3759](https://github.com/webiny/webiny-js/pull/3759))
 
-...
+With this release, we have fixed a bug that caused some elements from the underlying list to remain highlighted when users opened the file details drawer.
+
+<Image src={fmFileDetails} title={"File Manager: File Details"} />
