docs: fix assets

--- a/docs/release-notes/5.38.2/changelog.mdx
+++ b/docs/release-notes/5.38.2/changelog.mdx
@@ -7,8 +7,8 @@ description: See what's new in Webiny version 5.38.2.
 import { Alert } from "@/components/Alert";
 import { Gallery } from "@/components/Image";
 import hcmsFm1 from "./assets/hcms-fm-step-1.png";
-import hcmsFm2 from "./assets/hcms-fm-step-1.png";
-import fmFileDetails from "./assets/fm-file-details.png
+import hcmsFm2 from "./assets/hcms-fm-step-2.png";
+import fmFileDetails from "./assets/fm-file-details.png";
 
 <GithubRelease version={"5.38.2"} />
 
