feat: add notes about 3765 and 3761

--- a/docs/release-notes/5.38.2/changelog.mdx
+++ b/docs/release-notes/5.38.2/changelog.mdx
@@ -37,6 +37,14 @@ With this release, the identified issue has been addressed. Users can now seamle
   />
 </Gallery>
 
+### Fix Removal of Last Item in a Multiple Reference Field ([#3765](https://github.com/webiny/webiny-js/pull/3765))
+
+In 5.38.0 a bug was introduced that prevented users from removing the last item in a multiple reference field - item was removed from the UI, but it was not sent to the API, and it was not updated.
+
+### Fix Multiple Model Multi Reference Field Output Order on Read API ([#3761](https://github.com/webiny/webiny-js/pull/3761))
+
+When having multiple reference field, with multiple models, the order of the items was not correctly returned from the Read API.
+
 ## File Manager
 
 ### Fix File Details Drawer Overlay ([#3759](https://github.com/webiny/webiny-js/pull/3759))
