Company handbook wip

--- a/docs/handbook/company/why-webiny-exists.mdx
+++ b/docs/handbook/company/why-webiny-exists.mdx
@@ -9,6 +9,8 @@ slug: why-webiny-exists
 
 **Building the digital content platform modern enterprises want, and developers deserve.**
 
+Giving enterprises the means to take back control over their online experiences. 
+
 ## Our strategy
 
 ### Open-source as a foundation
